fix: z-index for sticky nav header

--- a/spark-frontend/styles/header.module.css
+++ b/spark-frontend/styles/header.module.css
@@ -13,6 +13,7 @@
     padding: 10px 100px;
     position: sticky;
     top: 0;
+    z-index: 1000;
 }
 
 .Header .nav-utilities {
